; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_route.c_rt_primary_default.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_route.c_rt_primary_default.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtentry = type { i32 }
%struct.sockaddr = type { i32 }

@RTF_IFSCOPE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rt_primary_default(%struct.rtentry* %0, %struct.sockaddr* %1) #0 {
  %3 = alloca %struct.rtentry*, align 8
  %4 = alloca %struct.sockaddr*, align 8
  store %struct.rtentry* %0, %struct.rtentry** %3, align 8
  store %struct.sockaddr* %1, %struct.sockaddr** %4, align 8
  %5 = load %struct.sockaddr*, %struct.sockaddr** %4, align 8
  %6 = call i64 @SA_DEFAULT(%struct.sockaddr* %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %16

8:                                                ; preds = %2
  %9 = load %struct.rtentry*, %struct.rtentry** %3, align 8
  %10 = getelementptr inbounds %struct.rtentry, %struct.rtentry* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @RTF_IFSCOPE, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  %15 = xor i1 %14, true
  br label %16

16:                                               ; preds = %8, %2
  %17 = phi i1 [ false, %2 ], [ %15, %8 ]
  %18 = zext i1 %17 to i32
  ret i32 %18
}

declare dso_local i64 @SA_DEFAULT(%struct.sockaddr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
